Fixed Header overlapping on Brands/Product Listing Pages

--- a/src/pages/BrandsListing/accordion-aside.css
+++ b/src/pages/BrandsListing/accordion-aside.css
@@ -6,7 +6,7 @@
 .accordion-aside.full-width {
 	display: block;
 	position: fixed;
-	z-index: 10;
+	z-index: 21;
 	top: 0;
 	left: 0;
 	bottom: 0;
